--- a/bos-web/src/main/webapp/WEB-INF/web.xml
+++ b/bos-web/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,16 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <!-- 配置过滤器，整合shiro -->
+  <filter>
+  	<filter-name>abc</filter-name>
+  	<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>abc</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
  <!-- 4.配置过滤器，解决hibernate延迟加载问题 -->
    <filter>
   	<filter-name>openSessionInView</filter-name>
@@ -41,5 +51,4 @@
   	<!-- 手动选择拦截内部转发 -->
   	<dispatcher>FORWARD</dispatcher>
   </filter-mapping>
-  
 </web-app>
